fix: Исправлена ошибка получения свобоного времени. Обновлены Get /branch/freetime и Get /client/orders
